PRINTF Con leaks HAHA Xd

--- a/42_ACADEMY/PRINTF/Makefile
+++ b/42_ACADEMY/PRINTF/Makefile
@@ -2,7 +2,7 @@ NAME = libftprintf.a
 
 SRCS = $(wildcard *.c)
 
-GCC = gcc -Wall -Wextra -Werror
+GCC = gcc -Wextra -Werror -Wall
 
 LIBFT = $(wildcard libft/*.c)
 
